testing now working

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "es6-angular",
-  "author": "Tushara Fernandi",
+  "author": "Tushara Fernando",
   "version": "0.0.1-pre",
   "description": "ES6 + AngularJS",
   "scripts": {
