--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,2 @@
-addons:
-  code_climate:
-    repo_token: 183911307c7e62d8c7ff7aac1a0d20ca9e132bef0feedbcfe42a71d4e7b812e5
+after_success:
+  - codeclimate < ./coverage/lcov.info
