--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
   "version": "0.0.1-pre",
   "description": "ES6 + AngularJS",
   "scripts": {
-    "postinstall": "./node_modules/.bin/webdriver-manager update",
-    "test": "./script/test",
-    "start": "ulimit -n 10240 && ./script/start"
+    "test": "./node_modules/.bin/karma start ./config/karma.config.js --single-run --browsers PhantomJS"
   },
   "repository": {
     "type": "git"
@@ -24,7 +22,7 @@
     "jasmine-core": "^2.1.2",
     "jshint": "^2.5.6",
     "karma": "^0.12.24",
-    "karma-chrome-launcher": "^0.1.5",
+    "karma-chrome-launcher": "https://registry.npmjs.org/karma-chrome-launcher/-/karma-chrome-launcher-0.1.7.tgz",
     "karma-cli": "^0.0.4",
     "karma-firefox-launcher": "^0.1.3",
     "karma-jasmine": "^0.3.1",
@@ -50,6 +48,8 @@
     "write-file-stdout": "0.0.2",
     "path": "^0.11.14",
     "fs": "0.0.2",
-    "karma-coverage": "^0.3.1"
+    "karma-coverage": "^0.3.1",
+    "phantomjs": "^1.9.16",
+    "karma-phantomjs-launcher": "^0.1.4"
   }
 }
