--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ before_install:
 before_script:
   - npm install -g grunt-cli
   - npm install -d
+  - npm install -g karma-coverage
 branches:
   only:
     - master
