--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "devDependencies":{
     "phantomjs": "^1.9.16",
     "karma-phantomjs-launcher": "^0.1.4",
-    "karma-coverage": "^0.3.1"
+    "karma-coverage": "^0.3.1",
+    "traceur": "^0.0.74"
   },
   "dependencies": {
     "assetgraph": "^1.12.1",
@@ -49,7 +50,6 @@
     "serve-static": "^1.7.0",
     "systemjs-assetgraph": "^0.1.0",
     "systemjs-builder": "^0.4.5",
-    "traceur": "^0.0.74",
     "write-file-stdout": "0.0.2",
     "path": "^0.11.14",
     "fs": "0.0.2"
