--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,8 @@ node_js:
 
 # Make sure we have new NPM.
 before_install:
+export DISPLAY=:99.0
+sh -e /etc/init.d/xvfb start
 
 before_script:
   - 'bower install'
