--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,12 @@ node_js:
 before_install:
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
+  - npm install -g codeclimate-test-reporter
+
 
 before_script:
   - 'bower install'
 
 after_script:
-  - codeclimate < test/coverage/**/lcov.info
+  - codeclimate < coverage/**/lcov.info
 
