--- a/.travis.yml
+++ b/.travis.yml
@@ -7,10 +7,10 @@ before_install:
   - npm install -g codeclimate-test-reporter
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
-  
+
 before_script:
   - 'bower install'
 
 after_script:
-  - codeclimate < coverage/**/lcov.info
+  - codeclimate < test/coverage/**/lcov.info
 
