--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,6 @@ before_script:
   - 'bower install'
 
 after_script:
-  - codeclimate < test/coverage/**/lcov.info
+  - codeclimate < client/test/coverage/**/lcov.info
 env:
   - CODECLIMATE_REPO_TOKEN=183911307c7e62d8c7ff7aac1a0d20ca9e132bef0feedbcfe42a71d4e7b812e5
