--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,6 @@ before_script:
   - 'bower install'
 
 after_script:
-  - 'mv test/coverage/**/lcov.info . '
+  - 'mv client/test/coverage/**/lcov.info ./client/ '
   - 'ls'
   - 'codeclimate < test/coverage/**/lcov.info'
