--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "karma-coverage": "^0.3.1",
     "karma-firefox-launcher": "^0.1.4",
     "phantomjs": "^1.9.16",
-    "traceur": "^0.0.74"
+    "traceur": "^0.0.74",
+    "karma": "https://registry.npmjs.org/karma/-/karma-0.12.28.tgz"
   },
   "dependencies": {
     "assetgraph": "^1.12.1",
