--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,6 @@ before_script:
   - 'bower install'
 
 after_script:
-  - 'mv .client/coverage/**/lcov.info ./client/ '
+  - 'mv ./client/coverage/**/lcov.info ./client/ '
   - 'ls ./client'
   - 'codeclimate < ./client/coverage/**/lcov.info'
