--- a/.travis.yml
+++ b/.travis.yml
@@ -16,4 +16,4 @@ after_script:
   - 'mv ./client/coverage/**/lcov.info ./client/ '
   - 'ls ./client'
   - 'cd client'
-  - 'codeclimate < ./client/lcov.info'
+  - 'codeclimate < ./lcov.info'
