--- a/bower.json
+++ b/bower.json
@@ -21,10 +21,11 @@
     "normalize-css": "~3.0.2",
     "lodash": "~2.4.1",
     "assert": "https://github.com/angular/assert",
-    "angular-material": "~0.8.3",
-    "material-design-icons": "https://github.com/google/material-design-icons"
+    "material-design-icons": "https://github.com/google/material-design-icons",
+    "angular-material": "~0.8.3"
   },
   "resolutions": {
-    "angular": "1.3.6"
+    "angular": "1.3.x",
+    "angular-aria": "^1.3.15 || >1.4.0-beta.0"
   }
 }
