build errors related to contextify fixed

--- a/package.json
+++ b/package.json
@@ -14,45 +14,43 @@
     "karma-firefox-launcher": "^0.1.4",
     "phantomjs": "^1.9.16",
     "traceur": "^0.0.74",
-    "karma": "https://registry.npmjs.org/karma/-/karma-0.12.28.tgz"
-  },
-  "dependencies": {
-    "assetgraph": "^1.12.1",
-    "assetgraph-builder": "^2.5.1",
-    "autoprefixer": "^4.0.0",
-    "autoprefixer-core": "^4.0.1",
-    "bower": "^1.3.12",
-    "connect": "^3.3.0",
-    "fb-flo": "^0.3.0",
-    "glob": "^4.0.6",
-    "graceful-fs": "^3.0.5",
-    "jasmine-core": "^2.1.2",
-    "jshint": "^2.5.6",
     "karma": "https://registry.npmjs.org/karma/-/karma-0.12.28.tgz",
     "karma-chrome-launcher": "https://registry.npmjs.org/karma-chrome-launcher/-/karma-chrome-launcher-0.1.7.tgz",
     "karma-cli": "^0.0.4",
-    "karma-firefox-launcher": "^0.1.3",
     "karma-jasmine": "^0.3.1",
     "karma-safari-launcher": "^0.1.1",
     "karma-sauce-launcher": "^0.2.10",
     "karma-traceur-preprocessor": "^0.4.0",
+    "fb-flo": "^0.3.0",
+    "protractor": "^1.3.1",
+    "jasmine-core": "^2.1.2"
+  },
+  "dependencies": {
+    "assetgraph": "https://registry.npmjs.org/assetgraph/-/assetgraph-1.13.1.tgz",
+    "assetgraph-builder": "https://registry.npmjs.org/assetgraph-builder/-/assetgraph-builder-2.7.0.tgz",
+    "autoprefixer": "^4.0.0",
+    "autoprefixer-core": "^4.0.1",
+    "bower": "^1.3.12",
+    "connect": "^3.3.0",
+    "fs": "0.0.2",
+    "glob": "^4.0.6",
+    "graceful-fs": "^3.0.5",
+    "jshint": "^2.5.6",
     "lodash": "^2.4.1",
     "mime": "^1.2.11",
     "minimist": "^1.1.0",
     "mkdirp": "^0.5.0",
     "morgan": "^1.4.0",
     "opn": "^1.0.0",
-    "protractor": "^1.3.1",
+    "path": "^0.11.14",
     "read-file-stdin": "^0.2.0",
     "rework": "^1.0.1",
     "rework-import": "^2.0.0",
     "rework-vars": "^3.1.1",
     "send": "^0.10.0",
     "serve-static": "^1.7.0",
-    "systemjs-assetgraph": "^0.1.0",
-    "systemjs-builder": "^0.4.5",
-    "write-file-stdout": "0.0.2",
-    "path": "^0.11.14",
-    "fs": "0.0.2"
+    "systemjs-assetgraph": "^0.1.1",
+    "systemjs-builder": "https://registry.npmjs.org/systemjs-builder/-/systemjs-builder-0.4.5.tgz",
+    "write-file-stdout": "0.0.2"
   }
 }
