--- a/package.json
+++ b/package.json
@@ -24,10 +24,9 @@
     "fb-flo": "^0.3.0",
     "protractor": "^1.3.1",
     "jasmine-core": "^2.1.2"
+
   },
   "dependencies": {
-    "assetgraph": "https://registry.npmjs.org/assetgraph/-/assetgraph-1.13.1.tgz",
-    "assetgraph-builder": "https://registry.npmjs.org/assetgraph-builder/-/assetgraph-builder-2.7.0.tgz",
     "autoprefixer": "^4.0.0",
     "autoprefixer-core": "^4.0.1",
     "bower": "^1.3.12",
@@ -49,8 +48,7 @@
     "rework-vars": "^3.1.1",
     "send": "^0.10.0",
     "serve-static": "^1.7.0",
-    "systemjs-assetgraph": "^0.1.1",
-    "systemjs-builder": "https://registry.npmjs.org/systemjs-builder/-/systemjs-builder-0.4.5.tgz",
+    "systemjs": "^0.16.11",
     "write-file-stdout": "0.0.2"
   }
 }
