--- a/package.json
+++ b/package.json
@@ -11,21 +11,20 @@
     "type": "git"
   },
   "devDependencies": {
-    "karma-coverage": "^0.3.1",
-    "karma-firefox-launcher": "^0.1.4",
-    "phantomjs": "^1.9.16",
-    "traceur": "^0.0.74",
+    "fb-flo": "^0.3.0",
+    "jasmine-core": "^2.1.2",
     "karma": "https://registry.npmjs.org/karma/-/karma-0.12.28.tgz",
     "karma-chrome-launcher": "https://registry.npmjs.org/karma-chrome-launcher/-/karma-chrome-launcher-0.1.7.tgz",
     "karma-cli": "^0.0.4",
+    "karma-coverage": "^0.3.1",
+    "karma-firefox-launcher": "^0.1.4",
     "karma-jasmine": "^0.3.1",
     "karma-safari-launcher": "^0.1.1",
     "karma-sauce-launcher": "^0.2.10",
     "karma-traceur-preprocessor": "^0.4.0",
-    "fb-flo": "^0.3.0",
-    "protractor": "^1.3.1",
-    "jasmine-core": "^2.1.2"
-
+    "phantomjs": "^1.9.16",
+    "protractor": "^2.0.0",
+    "traceur": "^0.0.74"
   },
   "dependencies": {
     "autoprefixer": "^4.0.0",
