--- a/package.json
+++ b/package.json
@@ -11,43 +11,43 @@
     "type": "git"
   },
   "devDependencies": {
-    "fb-flo": "^0.3.0",
-    "jasmine-core": "^2.1.2",
-    "karma": "https://registry.npmjs.org/karma/-/karma-0.12.28.tgz",
-    "karma-chrome-launcher": "https://registry.npmjs.org/karma-chrome-launcher/-/karma-chrome-launcher-0.1.7.tgz",
+    "fb-flo": "^0.4.0",
+    "jasmine-core": "^2.3.0",
+    "karma": "^0.12.31",
+    "karma-chrome-launcher": "^0.1.8",
     "karma-cli": "^0.0.4",
     "karma-coverage": "^0.3.1",
     "karma-firefox-launcher": "^0.1.4",
-    "karma-jasmine": "^0.3.1",
+    "karma-jasmine": "^0.3.5",
     "karma-safari-launcher": "^0.1.1",
     "karma-sauce-launcher": "^0.2.10",
     "karma-traceur-preprocessor": "^0.4.0",
     "phantomjs": "^1.9.16",
     "protractor": "^2.0.0",
-    "traceur": "^0.0.74"
+    "traceur": "^0.0.89"
   },
   "dependencies": {
-    "autoprefixer": "^4.0.0",
-    "autoprefixer-core": "^4.0.1",
-    "bower": "^1.3.12",
-    "connect": "^3.3.0",
+    "autoprefixer": "^5.1.1",
+    "autoprefixer-core": "^5.1.11",
+    "bower": "^1.4.1",
+    "connect": "^3.3.5",
     "fs": "0.0.2",
-    "glob": "^4.0.6",
-    "graceful-fs": "^3.0.5",
-    "jshint": "^2.5.6",
-    "lodash": "^2.4.1",
-    "mime": "^1.2.11",
-    "minimist": "^1.1.0",
+    "glob": "^5.0.5",
+    "graceful-fs": "^3.0.6",
+    "jshint": "^2.7.0",
+    "lodash": "^3.8.0",
+    "mime": "^1.3.4",
+    "minimist": "^1.1.1",
     "mkdirp": "^0.5.0",
-    "morgan": "^1.4.0",
-    "opn": "^1.0.0",
+    "morgan": "^1.5.2",
+    "opn": "^1.0.2",
     "path": "^0.11.14",
     "read-file-stdin": "^0.2.0",
     "rework": "^1.0.1",
-    "rework-import": "^2.0.0",
+    "rework-import": "^2.0.1",
     "rework-vars": "^3.1.1",
-    "send": "^0.10.0",
-    "serve-static": "^1.7.0",
+    "send": "^0.12.2",
+    "serve-static": "^1.9.2",
     "systemjs": "^0.16.11",
     "write-file-stdout": "0.0.2"
   }
