--- a/bower.json
+++ b/bower.json
@@ -10,22 +10,23 @@
     "system.js": "~0.10.2",
     "plugin-text": "https://github.com/systemjs/plugin-text.git",
     "plugin-json": "https://github.com/systemjs/plugin-json.git",
-    "angular": "1.3.6",
-    "angular-i18n": "1.3.6",
-    "angular-animate": "1.3.6",
-    "angular-touch": "1.3.6",
-    "angular-aria": "1.3.6",
-    "angular-messages": "1.3.6",
-    "angular-mocks": "1.3.6",
+    "angular": "1.4.0",
+    "angular-i18n": "1.4.0",
+    "angular-animate": "1.4.0",
+    "angular-touch": "1.4.0",
+    "angular-aria": "1.4.0",
+    "angular-messages": "1.4.0",
+    "angular-mocks": "1.4.0",
     "angular-ui-router": "~0.2.13",
     "normalize-css": "~3.0.2",
     "lodash": "~2.4.1",
     "assert": "https://github.com/angular/assert.git",
     "material-design-icons": "https://github.com/google/material-design-icons.git",
-    "angular-material": "~0.8.3"
+    "angular-material": "~0.9.7"
   },
   "resolutions": {
-    "angular": "1.3.x",
-    "angular-aria": "^1.3.15 || >1.4.0-beta.0"
+    "angular": "1.4.*",
+    "angular-aria": "^1.3.15 || >1.4.0-beta.0",
+    "angular-animate": "1.4.0"
   }
 }
