--- a/package.json
+++ b/package.json
@@ -12,42 +12,39 @@
   },
   "devDependencies": {
     "fb-flo": "^0.4.0",
-    "jasmine-core": "^2.3.0",
-    "karma": "^0.12.31",
-    "karma-chrome-launcher": "^0.1.8",
-    "karma-cli": "^0.0.4",
+    "jasmine-core": "^2.3.4",
+    "karma": "^0.12.35",
+    "karma-chrome-launcher": "^0.1.12",
+    "karma-cli": "0.0.4",
     "karma-coverage": "^0.3.1",
-    "karma-firefox-launcher": "^0.1.4",
-    "karma-jasmine": "^0.3.5",
-    "karma-safari-launcher": "^0.1.1",
-    "karma-sauce-launcher": "^0.2.10",
+    "karma-firefox-launcher": "^0.1.6",
+    "karma-jasmine": "*",
+    "karma-safari-launcher": "*",
+    "karma-sauce-launcher": "^0.2.11",
     "karma-traceur-preprocessor": "^0.4.0",
-    "phantomjs": "^1.9.16",
-    "protractor": "^2.0.0",
-    "traceur": "^0.0.89"
+    "phantomjs": "^1.9.17",
+    "protractor": "^2.1.0",
+    "traceur": "0.0.89"
   },
   "dependencies": {
-    "autoprefixer": "^5.1.1",
-    "autoprefixer-core": "^5.1.11",
-    "bower": "^1.4.1",
+    "autoprefixer": "^5.2.0",
+    "autoprefixer-core": "^5.2.0",
     "connect": "^3.3.5",
-    "fs": "0.0.2",
-    "glob": "^5.0.5",
-    "graceful-fs": "^3.0.6",
-    "jshint": "^2.7.0",
-    "lodash": "^3.8.0",
+    "glob": "^5.0.10",
+    "graceful-fs": "^3.0.8",
+    "jshint": "^2.8.0",
+    "lodash": "^3.9.3",
     "mime": "^1.3.4",
     "minimist": "^1.1.1",
-    "mkdirp": "^0.5.0",
-    "morgan": "^1.5.2",
+    "mkdirp": "^0.5.1",
+    "morgan": "^1.5.3",
     "opn": "^1.0.2",
-    "path": "^0.11.14",
     "read-file-stdin": "^0.2.0",
     "rework": "^1.0.1",
-    "rework-import": "^2.0.1",
+    "rework-import": "*",
     "rework-vars": "^3.1.1",
-    "send": "^0.12.2",
-    "serve-static": "^1.9.2",
+    "send": "^0.12.3",
+    "serve-static": "^1.9.3",
     "systemjs": "^0.16.11",
     "write-file-stdout": "0.0.2"
   }
