--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "devDependencies": {
     "fb-flo": "^0.4.0",
+    "grunt": "^0.4.5",
     "jasmine-core": "^2.3.4",
     "karma": "^0.12.35",
     "karma-chrome-launcher": "^0.1.12",
@@ -30,6 +31,7 @@
     "autoprefixer": "^5.2.0",
     "autoprefixer-core": "^5.2.0",
     "connect": "^3.3.5",
+    "d3-financial-components": "^0.2.2",
     "glob": "^5.0.10",
     "graceful-fs": "^3.0.8",
     "jshint": "^2.8.0",
